# obfs

./: Cargo.toml  PROTOCOL.md  README.md
.cargo/: mutants.toml
.github/workflows/: ci.yml  fuzz.yml  mutants.yml
client/: Cargo.toml
client/src/: client.rs  lib.rs  main.rs  tui.rs
common/: Cargo.toml
common/src/: crypto.rs  frame.rs  lib.rs  obfs.rs  observe.rs  privilege.rs  protocol.rs  tls_cfg.rs
common/tests/: frame_roundtrip.rs  handshake.rs  protocol_pump.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cipher_decrypt.rs  encode_decode_loop.rs  frame_decode.rs  strip_prefix.rs
gui/: Cargo.toml
gui/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  server.rs  tui.rs
server/tests/: e2e.rs
