[package]
name = "vpn-obfs-common"
version = "0.1.0"
edition = "2021"
description = "Shared protocol, crypto, obfuscation, and TLS config for vpn-obfs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
rcgen = "0.12"
rustls = { version = "0.22", default-features = false, features = ["tls12"] }
rustls-pemfile = "2"
sha2 = "0.10"
tokio-rustls = "0.25"
uuid = { version = "1", features = ["v4"] }
webpki-roots = "0.26"
x25519-dalek = { version = "2", features = ["static_secrets"] }
