[package]
name = "vpn-obfs-server"
version = "0.1.0"
edition = "2021"
description = "Server binary for vpn-obfs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun2 = { version = "2", features = ["async"] }
tungstenite = "0.21"
x25519-dalek = { version = "2", features = ["static_secrets"] }
vpn-obfs-common = { path = "../common" }
